fixed scrollbar causing layout shift

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -13,6 +13,7 @@ body {
     Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   font-size: 16px;
   background-color: black;
+  overflow-y: overlay;
 }
 
 p,
